added indexs to checks table
