# monitoring-service/src/api/handlers/checks.handler.ts
@@ -4,6 +4,7 @@ import {
   notFoundResponse,
   serverErrorResponse,
   errorResponse,
+  authenticationRequiredResponse,
 } from "./../helpers/errors";
 import { checksRepository } from "./../../db/index";
 import { plainToClass } from "class-transformer";
@@ -49,14 +50,14 @@ export const createCheck = async (
     }
     const checkId = check.raw[0].id;
 
-    const report = await createReport();
+    const report = await createReport(check.raw[0].id);
 
     if (report.raw?.length === 0) {
       // rollback
       next(serverErrorResponse("no rows was added in report"));
     }
 
-    intervalId = setInterval(updateReport, input.interval * 30 * 1000, checkId);
+    intervalId = setInterval(updateReport, input.interval * 20 * 1000, checkId);
 
     const updatedCheck = checksRepository.update(checkId, {
       intervalId: +intervalId,
@@ -90,8 +91,8 @@ export const listChecks = async (
 
   try {
     // TODO: create indexs
-    // CREATE INDEX IF NOT EXISTS check_name_idx ON movies USING GIN (to_tsvector('simple', name));
-    // CREATE INDEX IF NOT EXISTS check_tags_idx ON movies USING GIN (tags);
+    // CREATE INDEX IF NOT EXISTS check_name_idx ON check USING GIN (to_tsvector('simple', name));
+    // CREATE INDEX IF NOT EXISTS check_tags_idx ON check USING GIN (tags);
 
     const tag = input.tag || "";
     const name = input.name || "";
@@ -128,6 +129,9 @@ export const getCheck = async (
     const check = await checksRepository.findOne({
       where: {
         id: input.id,
+        user: {
+          id: req.user?.id,
+        },
       },
       relations: {
         report: true,
@@ -137,8 +141,104 @@ export const getCheck = async (
     if (!check) {
       return next(notFoundResponse());
     }
+
     return res.json(check);
   } catch (err) {
     next(serverErrorResponse(err));
   }
+};
+
+export const updateCheck = async (
+  req: IRequest,
+  res: Response,
+  next: NextFunction
+) => {
+  const params = plainToClass(IDParamDto, req.params);
+
+  let errors = validateSync(params);
+
+  if (errors.length > 0) {
+    return next(failedValidationResponse(errors[0]));
+  }
+
+  const input = plainToClass(CreateCheckDto, req.body);
+
+  errors = validateSync(input);
+
+  if (errors.length > 0) {
+    return next(failedValidationResponse(errors[0]));
+  }
+
+  try {
+    new URL(input.url);
+  } catch (err) {
+    return next(errorResponse("invalid url", StatusCodes.UNPROCESSABLE_ENTITY));
+  }
+
+  try {
+    const check = await checksRepository.findOne({
+      where: {
+        id: params.id,
+      },
+      relations: {
+        user: true,
+      },
+    });
+
+    if (!check) {
+      return next(notFoundResponse());
+    }
+    if (check.user.id !== req.user?.id) {
+      return next(authenticationRequiredResponse());
+    }
+
+    await checksRepository.update(params.id, {
+      ...input,
+    });
+  } catch (err) {
+    return next(serverErrorResponse(err));
+  }
+
+  return res.json({ message: "the check updated successfully" });
+};
+export const deleteCheck = async (
+  req: IRequest,
+  res: Response,
+  next: NextFunction
+) => {
+  const input = plainToClass(IDParamDto, req.params);
+
+  const errors = validateSync(input);
+
+  if (errors.length > 0) {
+    return next(failedValidationResponse(errors[0]));
+  }
+
+  try {
+    const check = await checksRepository.findOne({
+      where: {
+        id: input.id,
+        user: {
+          id: req.user?.id,
+        },
+      },
+      relations: {
+        report: true,
+      },
+    });
+
+    if (!check) {
+      return next(notFoundResponse());
+    }
+
+    // stop  running interval for this check;
+
+    await checksRepository.delete(check.id);
+
+    clearInterval(check.intervalId);
+  } catch (err) {
+    next(serverErrorResponse(err));
+  }
+
+  res.json({ message: "check deleted successfuly" });
 };
