# monitoring-service/src/api/routes/reports.routes.ts
@@ -1,7 +1,0 @@
-import { Router } from "express";
-
-const reportsRoutes = Router();
-
-reportsRoutes.get("/");
-
-export default reportsRoutes;
